# kau-ik-pro-app

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: launch.json
.github/workflows/: desktop-build-check.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-06-18-broker-secure-storage-pr1.md  2026-06-18-broker-setup-wizard-pr2.md  2026-06-18-secure-storage-packaged-spike.md  2026-06-19-esun-config-import.md  2026-06-19-portfolio-tables-symbol-sort-price.md  2026-06-21-position-market-value-return.md
docs/superpowers/specs/: 2026-06-17-broker-login-ux-design.md  2026-06-18-broker-setup-wizard-design.md  2026-06-19-portfolio-tables-symbol-sort-price-design.md  (+1 more)
scripts/: broker-certificate-file.test.ts  broker-picker.test.ts  broker-secret-payload.test.ts  broker-secret-store.test.ts  broker-setup-fields.test.ts  broker-setup-flow.test.ts  broker-setup-wizard-render.test.ts  build-desktop-retry.mjs  build-desktop-retry.test.mjs  build-desktop.mjs  desktop-targets.mjs  desktop-targets.test.mjs  esun-config-import.test.ts  preflight.mjs  preflight.test.mjs  run-ui-tests.mjs
server/: package.json  tsconfig.json
server/src/: app.ts  broker-credential-parts.test.ts  broker-credential-parts.ts  config-migration.test.ts  config-migration.ts  config.ts  context.ts  data-dir.test.ts  data-dir.ts  desktop-auth.test.ts  desktop-auth.ts  index.ts  provider-log-redaction.test.ts  provider-switch.ts  runtime-config.test.ts  runtime-config.ts  watchlist-store.ts
src/: App.css.ts  App.tsx  grid.css.ts  index.css  main.tsx  theme.css.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: bottom-dock.css.ts  bottom-dock.tsx  broker-setup-wizard.css.ts  broker-setup-wizard.tsx  candle-chart.css.ts  candle-chart.tsx  chips-card.tsx  command-palette.css.ts  command-palette.tsx  depth-ladder.css.ts  depth-ladder.tsx  depth-map.css.ts  depth-map.tsx  event-toasts.css.ts  event-toasts.tsx  flash-order.css.ts  flash-order.tsx  hud-header.css.ts  hud-header.tsx  market-bar.tsx  option-chain.css.ts  option-chain.tsx  order-ticket.css.ts  order-ticket.tsx  panel-chrome.css.ts  panel-chrome.tsx  panel.css.ts  pnl-panel.css.ts  pnl-panel.tsx  quote-board.css.ts  quote-board.tsx  replay-panel.css.ts  replay-panel.tsx  scanner-panel.css.ts  scanner-panel.tsx  server-manager.tsx  symbol-cell.css.ts  symbol-cell.tsx  tick-tape.css.ts  tick-tape.tsx  (+4 more)
src/hooks/: use-hotkeys.ts  use-poll.ts  use-position-market-data.ts  use-quotes.ts  use-stream.ts  use-watchlist.ts
src/lib/: api.ts  backend.ts  bracket.ts  broker-certificate-file.ts  broker-picker.ts  broker-secret-payload.ts  broker-secret-store.ts  broker-setup-fields.ts  broker-setup-flow.ts  capabilities.ts  contracts-cache.ts  display-price.test.ts  display-price.ts  esun-config-import.ts  indicators.ts  portfolio-summary.test.ts  portfolio-summary.ts  position-actions.ts  position-metrics.test.ts  position-metrics.ts  price-sync.ts  privacy.ts  regulatory.ts  risk.ts  runtime.ts  secure-storage-spike.ts  shioaji.ts  sounds.ts  stream.ts  table-sort.test.ts  table-sort.ts  tauri.ts  theme-store.ts  trade.ts  trigger-engine.ts  triggers.ts  workspace.ts
(+51 files in other folders)
