[package]
name = "kau-ik-pro-app"
version = "0.1.0"
description = "Kau-ik Pro — professional multi-broker trading terminal for Taiwan markets"
authors = ["Hardy Liu", "Sinotrade (original shioaji-pro-app)"]
license = "MIT"
repository = "https://github.com/howwayla/kau-ik-pro-app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
